Add span for quantity
Co-Authored-By: Alexei Pachecano <Juno-Explorer1@users.noreply.github.com>
Co-Authored-By: null <pmithapara@users.noreply.github.com>

--- a/cart/index.html
+++ b/cart/index.html
@@ -448,98 +448,122 @@
         <h5>Subtotal</h5>
         <ul>
           <li data-id="1" class="remove">
+            <span></span>
             <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p>
             <p>$65</p>
           </li>
           <li data-id="2" class="remove">
+            <span></span>
             <p>Nike Spring Men's Top</p>
             <p>$85</p>
           </li>
           <li data-id="3" class="remove">
+            <span></span>
             <p>Nike Sportswear Men's Shorts</p>
             <p>$55</p>
           </li>
           <li data-id="4" class="remove">
+            <span></span>
             <p>Nike Sportswear Club Men's T-Shirt</p>
             <p>$25</p>
           </li>
           <li data-id="5" class="remove">
+            <span></span>
             <p>Nike Sportswear Resort Men's Woven Flow Shorts</p>
             <p>$60</p>
           </li>
           <li data-id="6" class="remove">
+            <span></span>
             <p>Nike Windrunner Men's Running Jacket</p>
             <p>$115</p>
           </li>
           <li data-id="7" class="remove">
+            <span></span>
             <p>Nike Nike Pro Dri-FIT Women's Cropped Tank</p>
             <p>$45</p>
           </li>
           <li data-id="8" class="remove">
+            <span></span>
             <p>Nike Pro Dri-FIT Women's High-Rise Pocket Leggings</p>
             <p>$60</p>
           </li>
           <li data-id="9" class="remove">
+            <span></span>
             <p>Nike Dri-FIT Swoosh Women's Medium-Support Non-Padded Sports Bra</p>
             <p>$30</p>
           </li>
           <li data-id="10" class="remove">
+            <span></span>
             <p>Nike Sportswear Women's Woven Shorts</p>
             <p>$50</p>
           </li>
           <li data-id="11" class="remove">
+            <span></span>
             <p>Nike Sportswear Women's Washed Jersey Hoodie</p>
             <p>$75</p>
           </li>
           <li data-id="12" class="remove">
+            <span></span>
             <p>Nike Sportswear Women's Washed Jersey Shorts</p>
             <p>$55</p>
           </li>
           <li data-id="13" class="remove">
+            <span></span>
             <p>Adidas Designed 2 Move 3-Stripes Primeblue Shorts</p>
             <p>$30</p>
           </li>
           <li data-id="14" class="remove">
+            <span></span>
             <p>Adidas AEROREADY Designed To Move Sport 3-Stripes Tee</p>
             <p>$25</p>
           </li>
           <li data-id="15" class="remove">
+            <span></span>
             <p>Adidas Tiro 21 Track Pants</p>
             <p>$45</p>
           </li>
           <li data-id="16" class="remove">
+            <span></span>
             <p>Adidas Badge of Sport Tee</p>
             <p>$25</p>
           </li>
           <li data-id="17" class="remove">
+            <span></span>
             <p>Adidas AEROREADY Designed 2 Move Woven Sport Shorts</p>
             <p>$30</p>
           </li>
           <li data-id="18" class="remove">
+            <span></span>
             <p>Adidas Big Logo Shorts</p>
             <p>$30</p>
           </li>
           <li data-id="19" class="remove">
+            <span></span>
             <p>Adidas Primegreen Essentials Warm-Up Slim Tapered 3-Stripes Track Pants</p>
             <p>$40</p>
           </li>
           <li data-id="20" class="remove">
+            <span></span>
             <p>Adidas Own the Run Tee</p>
             <p>$35</p>
           </li>
           <li data-id="21" class="remove">
+            <span></span>
             <p>Adidas Designed to Move High-Rise 3-Stripes 3/4 Sport Tights</p>
             <p>$40</p>
           </li>
           <li data-id="22" class="remove">
+            <span></span>
             <p>Adidas Primeblue SST Track Jacket</p>
             <p>$75</p>
           </li>
           <li data-id="23" class="remove">
+            <span></span>
             <p>Adidas Essentials Loose Logo Tank Top</p>
             <p>$25</p>
           </li>
           <li data-id="24" class="remove">
+            <span></span>
             <p>Adidas Essentials Fleece 3-Stripes Pants</p>
             <p>$45</p>
           </li>
