Add span tags for prices
Co-Authored-By: Alexei Pachecano <Juno-Explorer1@users.noreply.github.com>
Co-Authored-By: null <pmithapara@users.noreply.github.com>

--- a/cart/index.html
+++ b/cart/index.html
@@ -445,6 +445,7 @@
       </section>
       <section id="order-summary">
         <h4>Order Summary</h4>
+        <span></span>
         <h5>Subtotal</h5>
         <ul>
           <li data-id="1" class="remove">
@@ -568,7 +569,9 @@
             <p>$45</p>
           </li>
         </ul>
+        <span></span>
         <h5>Tax</h5>
+        <span></span>
         <h5>Order Total</h5>
         <button>Checkout</button>
       </section>
