--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
         </li>
         <li id="category-filter">
           <label for="categories">Categories</label>
-          <select name="categories">
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="mercedes">Mercedes</option>
-            <option value="audi">Audi</option>
+          <select name="categories" id="categories">
+            <option value="adidas">Adidas</option>
+            <option value="nike">Nike</option>
           </select>
         </li>
         <li id=price-filter>
