Start basic description layout design
Co-Authored-By: null <pmithapara@users.noreply.github.com>

--- a/descriptions/index.html
+++ b/descriptions/index.html
@@ -12,22 +12,24 @@
 
     </header>
     <main id="descriptions">
-      <section data-id="1">
-        <figure>
-          <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
-        </figure>
-        <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
-        <p>Made with our iconic Club Fleece, the Nike Sportswear Essentials+ Hoodie has an extra cozy, comfortable feel. Its allover print is made up of distorted and faded logos inspired by punk flyers and zines.</p><!-- Description -->
-        <p>$65</p><!-- Price -->
-        <p>Nike</p><!-- Brand -->
-        <ul><!-- Category -->
-          <li>
-            <a>Nike</a>
-            <a>Men</a>
-            <a>Hoodie</a>
-          </li>
-        </ul>
-      </section>
+      <ul id="description_container">
+        <li data-id="1">
+          <figure>
+            <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+          </figure>
+          <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
+          <p>Made with our iconic Club Fleece, the Nike Sportswear Essentials+ Hoodie has an extra cozy, comfortable feel. Its allover print is made up of distorted and faded logos inspired by punk flyers and zines.</p><!-- Description -->
+          <p>$65</p><!-- Price -->
+          <p>Nike</p><!-- Brand -->
+          <ul><!-- Category -->
+            <li>
+              <a>Nike</a>
+              <a>Men</a>
+              <a>Hoodie</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
       <!-- Keep all orders in blocks and order them by date of when the order was made. make a link that goes to a page with more description on each individual order -->
     </main>
     <footer>
