--- a/descriptions/index.html
+++ b/descriptions/index.html
@@ -8,10 +8,52 @@
     <link rel="stylesheet" href="../assets/css/screen.css" />
   </head>
   <body>
-    <header>
-
+    <header aria-label="Navigation">
+      <nav id="home-nav" aria-label="Home Page">
+        <a href="../">Home</a>
+      </nav>
+      <nav class="nothide" id="second-nav" aria-label="Data Pages">
+        <ul>
+          <li>
+            <a href="../shipping">Shipping</a>
+          </li>
+          <li>
+            <a href="../billing">Billing</a>
+          </li>
+          <li>
+            <a href="../payment">Payment</a>
+          </li>
+          <li>
+            <a href="../cart">Review</a>
+          </li>
+        </ul>
+      </nav>
+      <button class="nothide" type="button">Menu</button>
+      <button aria-hidden="true" type="button" class="hide">Menu</button>
     </header>
     <main id="descriptions">
+      <nav class="hide" aria-hidden="true">
+        <ul>
+          <li>
+            <button class="hide" type="button">Cart</button>
+          </li>
+          <li class="location">
+            <a href="../">Home</a>
+          </li>
+          <li>
+            <a href="../shipping">Shipping</a>
+          </li>
+          <li>
+            <a href="../billing">Billing</a>
+          </li>
+          <li>
+            <a href="../payment">Payment</a>
+          </li>
+          <li>
+            <a href="../cart">Review</a>
+          </li>
+        </ul>
+      </nav>
       <ul id="description_container">
         <li data-id="1">
           <figure>
@@ -24,12 +66,88 @@
           <ul><!-- Category -->
             <li>
               <a>Nike</a>
+            </li>
+            <li>
               <a>Men</a>
+            </li>
+            <li>
               <a>Hoodie</a>
             </li>
           </ul>
         </li>
       </ul>
+      <section id="background">
+        <section id="carousel_container">
+          <ul>
+            <li data-id="1">
+              <figure>
+                <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+              </figure>
+              <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
+            </li>
+            <li data-id="1">
+              <figure>
+                <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+              </figure>
+              <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
+            </li>
+            <li data-id="1">
+              <figure>
+                <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+              </figure>
+              <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
+            </li>
+            <li data-id="1">
+              <figure>
+                <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+              </figure>
+              <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
+            </li>
+            <li data-id="1">
+              <figure>
+                <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+              </figure>
+              <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
+            </li>
+            <li data-id="1">
+              <figure>
+                <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+              </figure>
+              <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
+            </li>
+            <li data-id="1">
+              <figure>
+                <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+              </figure>
+              <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
+            </li>
+            <li data-id="1">
+              <figure>
+                <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+              </figure>
+              <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
+            </li>
+            <li data-id="1">
+              <figure>
+                <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+              </figure>
+              <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
+            </li>
+            <li data-id="1">
+              <figure>
+                <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+              </figure>
+              <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
+            </li>
+            <li data-id="1">
+              <figure>
+                <img src="../assets/images/item1.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+              </figure>
+              <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p><!-- Name -->
+            </li>
+          </ul>
+        </section>
+      </section>
       <!-- Keep all orders in blocks and order them by date of when the order was made. make a link that goes to a page with more description on each individual order -->
     </main>
     <footer>
