Add anchor tag to link to description page
Co-Authored-By: null <pmithapara@users.noreply.github.com>
Co-Authored-By: Angelo Nelson <angelonelson@outlook.com>
Co-Authored-By: Alexei Pachecano <Juno-Explorer1@users.noreply.github.com>

--- a/cart/index.html
+++ b/cart/index.html
@@ -61,7 +61,9 @@
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/0396865d-bcb3-4d1f-9f6a-2a46676b1c12/sportswear-sport-essentials-mens-allover-print-pullover-hoodie-wRTRl3.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p>
+            <a href="../descriptions/#1">
+              <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p>
+            </a>
             <p>$65</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -77,7 +79,9 @@
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/fbdbfed7-40fa-463f-859a-84c7028df559/spring-mens-top-RHb2XN.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Nike Spring Men's Top</p>
+            <a href="../descriptions/#2">
+              <p>Nike Spring Men's Top</p>
+            </a>
             <p>$85</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -93,7 +97,9 @@
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/04b441d1-380b-444f-918d-29b197c7b82d/sportswear-mens-shorts-08klZm.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Nike Sportswear Men's Shorts</p>
+            <a href="../descriptions/#3">
+              <p>Nike Sportswear Men's Shorts</p>
+            </a>
             <p>$55</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -109,7 +115,9 @@
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/cn1lpic7hmc11azcxrhi/sportswear-club-mens-t-shirt-ShrJfX.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Nike Sportswear Club Men's T-Shirt</p>
+            <a href="../descriptions/#4">
+              <p>Nike Sportswear Club Men's T-Shirt</p>
+            </a>
             <p>$25</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -125,7 +133,9 @@
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/de615f76-3320-45f0-8bd6-c2aaa1c1342b/sportswear-resort-mens-woven-flow-shorts-PCFSJ5.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Nike Sportswear Resort Men's Woven Flow Shorts</p>
+            <a href="../descriptions/#5">
+              <p>Nike Sportswear Resort Men's Woven Flow Shorts</p>
+            </a>
             <p>$60</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -141,7 +151,9 @@
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/6beb3665-eb20-4c85-81fa-77a845605a1e/windrunner-mens-running-jacket-w6cgXz.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Nike Windrunner Men's Running Jacket</p>
+            <a href="../descriptions/#6">
+              <p>Nike Windrunner Men's Running Jacket</p>
+            </a>
             <p>$115</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -157,7 +169,9 @@
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/7908c0aa-4c8d-4f90-ae5d-ae6f72724b5b/pro-dri-fit-womens-cropped-tank-clWpVJ.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Nike Nike Pro Dri-FIT Women's Cropped Tank</p>
+            <a href="../descriptions/#7">
+              <p>Nike Nike Pro Dri-FIT Women's Cropped Tank</p>
+            </a>
             <p>$45</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -173,7 +187,9 @@
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/87b751a5-5093-4824-8019-c216058f6086/pro-dri-fit-womens-high-rise-pocket-leggings-XV2RSh.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Nike Pro Dri-FIT Women's High-Rise Pocket Leggings</p>
+            <a href="../descriptions/#8">
+              <p>Nike Pro Dri-FIT Women's High-Rise Pocket Leggings</p>
+            </a>
             <p>$60</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -189,7 +205,9 @@
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/bd0b412c-b163-4ab9-afd7-251cbdb53f7d/dri-fit-swoosh-womens-medium-support-non-padded-sports-bra-2KD3m2.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Nike Dri-FIT Swoosh Women's Medium-Support Non-Padded Sports Bra</p>
+            <a href="../descriptions/#9">
+              <p>Nike Dri-FIT Swoosh Women's Medium-Support Non-Padded Sports Bra</p>
+            </a>
             <p>$30</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -205,7 +223,9 @@
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/db95d535-5f11-4a4b-a6fa-7e3673c7d2cd/sportswear-womens-woven-shorts-c2cKBX.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Nike Sportswear Women's Woven Shorts</p>
+            <a href="../descriptions/#10">
+              <p>Nike Sportswear Women's Woven Shorts</p>
+            </a>
             <p>$50</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -221,7 +241,9 @@
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/c2a2c3d6-b0f7-4444-8c9d-2d42c1c80748/sportswear-womens-washed-jersey-hoodie-plus-size-lxZmrw.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Nike Sportswear Women's Washed Jersey Hoodie</p>
+            <a href="../descriptions/#11">
+              <p>Nike Sportswear Women's Washed Jersey Hoodie</p>
+            </a>
             <p>$75</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -237,7 +259,9 @@
             <figure>
               <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/3fea0ad3-99d7-408a-98d6-53e30ed56779/sportswear-womens-washed-jersey-shorts-plus-size-dvs6C2.png" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Nike Sportswear Women's Washed Jersey Shorts</p>
+            <a href="../descriptions/#12">
+              <p>Nike Sportswear Women's Washed Jersey Shorts</p>
+            </a>
             <p>$55</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -253,7 +277,9 @@
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/f1809560b5374057a9abad2300839d39_9366/adidas_Designed_2_Move_3-Stripes_Primeblue_Shorts_Green_H55312_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Adidas Designed 2 Move 3-Stripes Primeblue Shorts</p>
+            <a href="../descriptions/#13">
+              <p>Adidas Designed 2 Move 3-Stripes Primeblue Shorts</p>
+            </a>
             <p>$30</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -269,7 +295,9 @@
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/a098375eb12f4363bd62ac8300c5432d_9366/AEROREADY_Designed_To_Move_Sport_3-Stripes_Tee_White_GM2156_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Adidas AEROREADY Designed To Move Sport 3-Stripes Tee</p>
+            <a href="../descriptions/#14">
+              <p>Adidas AEROREADY Designed To Move Sport 3-Stripes Tee</p>
+            </a>
             <p>$25</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -285,7 +313,9 @@
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/9c7058d8677742ac8519ac3f009cdcf4_9366/Tiro_21_Track_Pants_Black_GH7305_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Adidas Tiro 21 Track Pants</p>
+            <a href="../descriptions/#15">
+              <p>Adidas Tiro 21 Track Pants</p>
+            </a>
             <p>$45</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -301,7 +331,9 @@
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/b87f7be790bb4b06a093aa07007bb908_9366/Badge_of_Sport_Tee_White_ED9606_01_laydown.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Adidas Badge of Sport Tee</p>
+            <a href="../descriptions/#16">
+              <p>Adidas Badge of Sport Tee</p>
+            </a>
             <p>$25</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -317,7 +349,9 @@
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/e3670e3503b646d9b898ad270064bbca_9366/AEROREADY_Designed_2_Move_Woven_Sport_Shorts_Green_H30301_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Adidas AEROREADY Designed 2 Move Woven Sport Shorts</p>
+            <a href="../descriptions/#17">
+              <p>Adidas AEROREADY Designed 2 Move Woven Sport Shorts</p>
+            </a>
             <p>$30</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -333,7 +367,9 @@
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/47d71c179ad845df97aeac05004f29f3_9366/Big_Logo_Shorts_Black_GT3018_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Adidas Big Logo Shorts</p>
+            <a href="../descriptions/#18">
+              <p>Adidas Big Logo Shorts</p>
+            </a>
             <p>$30</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -349,7 +385,9 @@
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/41b72c46f57f486391ebad2400b3e72f_9366/Primegreen_Essentials_Warm-Up_Slim_Tapered_3-Stripes_Track_Pants_Black_H48447_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Adidas Primegreen Essentials Warm-Up Slim Tapered 3-Stripes Track Pants</p>
+            <a href="../descriptions/#19">
+              <p>Adidas Primegreen Essentials Warm-Up Slim Tapered 3-Stripes Track Pants</p>
+            </a>
             <p>$40</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -365,7 +403,9 @@
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/2eb52e833b644f099180ac8401169eb3_9366/Own_the_Run_Tee_White_GJ9989_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Adidas Own the Run Tee</p>
+            <a href="../descriptions/#20">
+              <p>Adidas Own the Run Tee</p>
+            </a>
             <p>$35</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -381,7 +421,9 @@
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/c55d61bfc03640d795b9ac8300407b8a_9366/Designed_to_Move_High-Rise_3-Stripes_3-4_Sport_Tights_Black_GL3985_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Adidas Designed to Move High-Rise 3-Stripes 3/4 Sport Tights</p>
+            <a href="../descriptions/#21">
+              <p>Adidas Designed to Move High-Rise 3-Stripes 3/4 Sport Tights</p>
+            </a>
             <p>$40</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -397,7 +439,9 @@
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/25c141357c904026a1d0add700dc6f82_9366/Primeblue_SST_Track_Jacket_Red_HE9562_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Adidas Primeblue SST Track Jacket</p>
+            <a href="../descriptions/#22">
+              <p>Adidas Primeblue SST Track Jacket</p>
+            </a>
             <p>$75</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -413,7 +457,9 @@
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/9f081356674948ca99f3ac820134738c_9366/Essentials_Loose_Logo_Tank_Top_White_GL0567_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Adidas Essentials Loose Logo Tank Top</p>
+            <a href="../descriptions/#23">
+              <p>Adidas Essentials Loose Logo Tank Top</p>
+            </a>
             <p>$25</p>
             <ul>
               <li><a href="#">Vintage</a></li>
@@ -429,7 +475,9 @@
             <figure>
               <img src="https://assets.adidas.com/images/w_600,f_auto,q_auto/bb87be1d60c74eee81b1acfb012da722_9366/Essentials_Fleece_3-Stripes_Pants_Grey_GV6020_21_model.jpg" alt="Nike shirt image"/><!-- Checkout srcset -->
             </figure>
-            <p>Adidas Essentials Fleece 3-Stripes Pants</p>
+            <a href="../descriptions/#24">
+              <p>Adidas Essentials Fleece 3-Stripes Pants</p>
+            </a>
             <p>$45</p>
             <ul>
               <li><a href="#">Vintage</a></li>
