--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <input type="number" placeholder="350"/>
           </fieldset>
         -->
-        <label>Max Price</label>
+          <label>Max Price</label>
           <input type="number" placeholder="12" id="max-price" />
         </li>
         <li id="size-filter">
@@ -106,17 +106,17 @@
       </ul>
       <ol id="item-grid" aria-label="Items">
         <li data-id="1" >
-          <figure>
-            <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/0396865d-bcb3-4d1f-9f6a-2a46676b1c12/sportswear-sport-essentials-mens-allover-print-pullover-hoodie-wRTRl3.png" alt="Nike shirt image"/><!-- Checkout srcset -->
-          </figure>
-          <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p>
-          <p>$65</p>
-          <a href="#"><p>
-            Made with our iconic Club Fleece, the Nike Sportswear Essentials+ Hoodie has an extra
-            cozy, comfortable feel. Its allover print is made up of distorted and faded logos
-            inspired by punk flyers and zines.
-          </p></a>
-          <button>Add to Cart</button>
+            <figure>
+              <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/0396865d-bcb3-4d1f-9f6a-2a46676b1c12/sportswear-sport-essentials-mens-allover-print-pullover-hoodie-wRTRl3.png" alt="Nike shirt image"/><!-- Checkout srcset -->
+            </figure>
+            <p>Nike Sportswear Sport Essentials+ Men's Allover Print Pullover Hoodie</p>
+            <p>$65</p>
+            <a href="descriptions/#1"><p>
+              Made with our iconic Club Fleece, the Nike Sportswear Essentials+ Hoodie has an extra
+              cozy, comfortable feel. Its allover print is made up of distorted and faded logos
+              inspired by punk flyers and zines.
+            </p></a>
+            <button>Add to Cart</button>
         </li>
         <li data-id="2" >
           <figure>
@@ -124,7 +124,7 @@
           </figure>
           <p>Nike Spring Men's Top</p>
           <p>$85</p>
-          <a href="#"><p>
+          <a href="descriptions/#2"><p>
             Vacation or staycation, our Hawaiian-inspired wood-blocking print will have you dreaming
             of spring break. A classic button-down design adds polish while sweat-wicking technology
             helps you stay dry and comfortable wherever your free time takes you.
@@ -137,7 +137,7 @@
           </figure>
           <p>Nike Sportswear Men's Shorts</p>
           <p>$55</p>
-          <a href="#"><p>
+          <a href="descriptions/#3"><p>
             Vacation or staycation, spring break is a whole vibe. Let these French terry shorts be
             your off duty uniform—the bold colors and wood-block prints will bring the island to
             you.
@@ -150,7 +150,7 @@
           </figure>
           <p>Nike Sportswear Club Men's T-Shirt</p>
           <p>$25</p>
-          <a href="#"><p>
+          <a href="descriptions/#4"><p>
             The Nike Sportswear Club T-Shirt is made with our everyday cotton fabric and a classic
             fit for a familiar feel right out of the bag. An embroidered Futura logo on the chest
             provides a signature Nike look.
@@ -163,7 +163,7 @@
           </figure>
           <p>Nike Sportswear Resort Men's Woven Flow Shorts</p>
           <p>$60</p>
-          <a href="#"><p>
+          <a href="descriptions/#5"><p>
             These shorts have a breathable mesh lining and lightweight woven fabric, so you can stay
             cool and comfortable on warmer days. The back pocket has a drainage grommet ideal for
             days spent in or out of the water.
@@ -176,7 +176,7 @@
           </figure>
           <p>Nike Windrunner Men's Running Jacket</p>
           <p>$115</p>
-          <a href="#"><p>
+          <a href="descriptions/#6"><p>
             The Nike Windrunner Jacket gets updated with water-repellent materials and a packable
             design. Vent details at the back and at the chevron help keep you cool when your run
             heats up. This product is made with at least 50% recycled polyester fibers.
@@ -189,7 +189,7 @@
           </figure>
           <p>Nike Nike Pro Dri-FIT Women's Cropped Tank</p>
           <p>$45</p>
-          <a href="#"><p>
+          <a href="descriptions/#7"><p>
             The Nike Pro Dri-FIT Tank keeps you dry and moving freely during high-heat workouts and
             competitions. Breathable fabric in the back lets cool air in while a shelf-bra in the
             front gives you the lasting confidence of gentle support. This product is made with at
@@ -203,7 +203,7 @@
           </figure>
           <p>Nike Pro Dri-FIT Women's High-Rise Pocket Leggings</p>
           <p>$60</p>
-          <a href="#"><p>
+          <a href="descriptions/#8"><p>
             The Nike Pro Dri-FIT Leggings wrap you in stretchy fabric that wicks sweat to keep you
             feeling supported and dry while you train or compete. This product is made with at least
             50% recycled polyester fibers.
@@ -216,7 +216,7 @@
           </figure>
           <p>Nike Dri-FIT Swoosh Women's Medium-Support Non-Padded Sports Bra</p>
           <p>$30</p>
-          <a href="#"><p>
+          <a href="descriptions/#9"><p>
             With wide, comfy straps in a classic racerback design, the Nike Swoosh Sports Bra feels snug and secure while you move. Smooth, lightweight fabric wicks sweat to keep you dry, comfortable and focused. For every rep, step and jump—know that you’re supported. This product is made with at least 75% recycled polyester fibers.
           </p></a>
           <button>Add to Cart</button>
@@ -227,7 +227,7 @@
           </figure>
           <p>Nike Sportswear Women's Woven Shorts</p>
           <p>$50</p>
-          <a href="#"><p>
+          <a href="descriptions/#10"><p>
             Take an instant-holiday in the Nike Sportswear Shorts. A starburst allover print gives you bold '70s style while lightweight nylon fabric sets you up for comfort.
           </p></a>
           <button>Add to Cart</button>
@@ -238,7 +238,7 @@
           </figure>
           <p>Nike Sportswear Women's Washed Jersey Hoodie</p>
           <p>$75</p>
-          <a href="#"><p>
+          <a href="descriptions/#11"><p>
             When the weather warms up, you'll want to reach for this washed, extra-oversized hoodie. Jersey fabric offers an alternative to fleece that's perfect for those days that call for a lightweight layer.
           </p></a>
           <button>Add to Cart</button>
@@ -249,7 +249,7 @@
           </figure>
           <p>Nike Sportswear Women's Washed Jersey Shorts</p>
           <p>$55</p>
-          <a href="#"><p>
+          <a href="descriptions/#12"><p>
             Kick back in the comfort of soft clouds. The allover tie-dye print of these shorts brings a wash of color to your look while their roomy fit, soft jersey fabric and mid-length cut make them a lounge-worthy staple.
           </p></a>
           <button>Add to Cart</button>
@@ -260,7 +260,7 @@
           </figure>
           <p>Adidas Designed 2 Move 3-Stripes Primeblue Shorts</p>
           <p>$30</p>
-          <a href="#"><p>
+          <a href="descriptions/#13"><p>
             Wouldn't it be great if you could work out without your keys and cash falling out when you lie back on the bench press? The zip pockets on these adidas shorts keep your essentials in place so you can train without distraction. Next up: handstand push-ups.
           </p></a>
           <button>Add to Cart</button>
@@ -271,7 +271,7 @@
           </figure>
           <p>Adidas AEROREADY Designed To Move Sport 3-Stripes Tee</p>
           <p>$25</p>
-          <a href="#"><p>
+          <a href="descriptions/#14"><p>
             From morning meetings to afternoon workouts, this adidas t-shirt keeps your look on point while you move through your day. It keeps you dry with moisture-managing AEROREADY so you can keep going in comfort. The adidas Badge of Sport and 3-Stripes add sportswear vibes, and the regular fit delivers versatile, casual style.
           </p></a>
           <button>Add to Cart</button>
@@ -282,7 +282,7 @@
           </figure>
           <p>Adidas Tiro 21 Track Pants</p>
           <p>$45</p>
-          <a href="#"><p>
+          <a href="descriptions/#15"><p>
             Too good to limit to the pitch. The adidas Tiro pants debuted as training wear, but they're now a streetwear staple. Ankle zips allow you to pull these pants on over sneakers. Moisture-absorbing AEROREADY ensures you stay dry no matter where life takes you.
           </p></a>
           <button>Add to Cart</button>
@@ -293,7 +293,7 @@
           </figure>
           <p>Adidas Badge of Sport Tee</p>
           <p>$25</p>
-          <a href="#"><p>
+          <a href="descriptions/#16"><p>
             For days on the move or nights on the town, this t-shirt lets everyone know whose team you play for. It's made of soft cotton jersey for all-day comfort. A bold contrast adidas Badge of Sport stands out on the chest.
           </p></a>
           <button>Add to Cart</button>
@@ -304,7 +304,7 @@
           </figure>
           <p>Adidas AEROREADY Designed 2 Move Woven Sport Shorts</p>
           <p>$30</p>
-          <a href="#"><p>
+          <a href="descriptions/#17"><p>
             A comfortable pair of workout shorts that covers you on the moisture-absorbing front with AEROREADY to help keep you dry. Get to that next set on the circuit or stick around for another game of pickup with the crew. You've got plenty of room to move and side pockets to stow away keys or your cell phone.
           </p></a>
           <button>Add to Cart</button>
@@ -315,7 +315,7 @@
           </figure>
           <p>Adidas Big Logo Shorts</p>
           <p>$30</p>
-          <a href="#"><p>
+          <a href="descriptions/#18"><p>
             Stay cool and comfortable on the hardwood in these shorts. Moisture-absorbing AEROREADY keeps you feeling dry and fresh, and perforated panels allow plenty of airflow as you run the floor. An adidas logo graphic on the leg adds a touch of sportswear style.
           </p></a>
           <button>Add to Cart</button>
@@ -326,7 +326,7 @@
           </figure>
           <p>Adidas Primegreen Essentials Warm-Up Slim Tapered 3-Stripes Track Pants</p>
           <p>$40</p>
-          <a href="#"><p>
+          <a href="descriptions/#19"><p>
             Stay comfortable to stay motivated. These adidas track pants fit close to the body for zero distractions. Cinch down the drawcord to help the pants stay put, whether you're climbing stairs or squatting low. Front pockets keep your music player and spare change conveniently stashed.
           </p></a>
           <button>Add to Cart</button>
@@ -337,7 +337,7 @@
           </figure>
           <p>Adidas Own the Run Tee</p>
           <p>$35</p>
-          <a href="#"><p>
+          <a href="descriptions/#20"><p>
             Life gets busy and complicated. Some days you don't feel like you have the time, or the energy, for a run. Keep things simple with this adidas Own the Run t-shirt. It's soft, comfortable and quick-drying. Plus it's made with recycled materials, part of adidas' commitment to creating a more sustainable future. So you can feel good about the shirt on your back when you lay down those miles.
           </p></a>
           <button>Add to Cart</button>
@@ -348,7 +348,7 @@
           </figure>
           <p>Adidas Designed to Move High-Rise 3-Stripes 3/4 Sport Tights</p>
           <p>$40</p>
-          <a href="#"><p>
+          <a href="descriptions/#21"><p>
             Put your best foot forward in every situation. These adidas tights have moisture-absorbing AEROREADY to keep you cool and dry. Whether it's cycling class or your lunchtime run, the high waist and three-quarter crop give these tights the ability to match seamlessly with your favorite workout gear.
           </p></a>
           <button>Add to Cart</button>
@@ -359,7 +359,7 @@
           </figure>
           <p>Adidas Primeblue SST Track Jacket</p>
           <p>$75</p>
-          <a href="#"><p>
+          <a href="descriptions/#22"><p>
             A track jacket like never before. Sure, this may look just like iconic adidas gear from the archive, but this Primeblue SST Track Top symbolizes change. The iconic silhouette is made with Parley Ocean Plastic that's made from upcycled plastic waste collected from ocean shores. It's a statement style that's good for the planet too. Stand up, stand out and join adidas' commitment to help end plastic waste.
           </p></a>
           <button>Add to Cart</button>
@@ -370,7 +370,7 @@
           </figure>
           <p>Adidas Essentials Loose Logo Tank Top</p>
           <p>$25</p>
-          <a href="#"><p>
+          <a href="descriptions/#23"><p>
             What's on the agenda? Whether it's a quick lunch hour workout or a casual hang, you're covered with this adidas tank top. The fit is not too tight and not too loose — just perfectly comfortable. The high neck keeps things covered up front, and the racerback shows off your sports bra while also making sure you have a full range of motion.
           </p></a>
           <button>Add to Cart</button>
@@ -381,7 +381,7 @@
           </figure>
           <p>Adidas Essentials Fleece 3-Stripes Pants</p>
           <p>$45</p>
-          <a href="#"><p>
+          <a href="descriptions/#24"><p>
             Cool down in style. These adidas pants have a soft, comfortable feel thanks to their relaxed design. The banded hem gives you a clean look at the ankle, and the traditional 3-Stripes finish them off with sportswear style. Perfect for cooling down after a grueling gym session or catching the game after work.
           </p></a>
           <button>Add to Cart</button>
