Add filter options

--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
         </li>
         </li>
         <li id="category-filter">
-          <label for="categories">Categories</label>
-          <select name="categories" id="categories">
-            <option value="adidas">Adidas</option>
+          <label for="brand">Brand</label>
+          <select name="brand">
+            <option value="all">All</option>
             <option value="nike">Nike</option>
+            <option value="adidas">Adidas</option>
           </select>
         </li>
         <li id=price-filter>
@@ -86,12 +87,21 @@
           <!-- Accessibility: We will use US measuring system instead of British(Nigeria's) -->
         </li>
         <li id="material-filter">
-          <label for="categories">Material</label>
+          <label for="categories">Categories</label>
           <select name="categories">
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="mercedes">Mercedes</option>
-            <option value="audi">Audi</option>
+            <option value="all">All</option>
+            <option value="nike">Nike</option>
+            <option value="adidas">Adidas</option>
+            <option value="men">Men</option>
+            <option value="women">Women</option>
+            <option value="shorts">Shorts</option>
+            <option value="hoodie">Hoodie</option>
+            <option value="button-down">Button-Down</option>
+            <option value="t-shirt">T-Shirt</option>
+            <option value="jacket">Jacket</option>
+            <option value="tank-top">Tank Top</option>
+            <option value="bra">Bra</option>
+            <option value="pants">Pants</option>
           </select>
         </li>
         <li id="discounts-filter">
